// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should show correct message when multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $25,500.00
  </h1>
</div>
`;

exports[`Should show correct message when only one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $150.00
  </h1>
</div>
`;
